brotli dependency fix see h2o/h2o PR #2326

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -542,9 +542,9 @@ SET_TARGET_PROPERTIES(libh2o PROPERTIES
     VERSION ${LIBRARY_VERSION}
     SOVERSION ${LIBRARY_SOVERSION})
 IF (WSLAY_FOUND)
-    TARGET_LINK_LIBRARIES(libh2o ${WSLAY_LIBRARIES} ${LIBUV_LIBRARIES} ${EXTRA_LIBS})
+    TARGET_LINK_LIBRARIES(libh2o ${WSLAY_LIBRARIES} ${LIBUV_LIBRARIES} ${EXTRA_LIBS} -lbrotlidec -lbrotlienc)
 ELSE ()
-    TARGET_LINK_LIBRARIES(libh2o ${LIBUV_LIBRARIES} ${EXTRA_LIBS})
+    TARGET_LINK_LIBRARIES(libh2o ${LIBUV_LIBRARIES} ${EXTRA_LIBS} -lbrotlidec -lbrotlienc)
 ENDIF (WSLAY_FOUND)
 SET_TARGET_PROPERTIES(libh2o-evloop PROPERTIES
     OUTPUT_NAME h2o-evloop
@@ -552,9 +552,9 @@ SET_TARGET_PROPERTIES(libh2o-evloop PROPERTIES
     VERSION ${LIBRARY_VERSION}
     SOVERSION ${LIBRARY_SOVERSION})
 IF (WSLAY_FOUND)
-    TARGET_LINK_LIBRARIES(libh2o-evloop ${WSLAY_LIBRARIES} ${EXTRA_LIBS})
+    TARGET_LINK_LIBRARIES(libh2o-evloop ${WSLAY_LIBRARIES} ${EXTRA_LIBS} -lbrotlidec -lbrotlienc)
 ELSE ()
-    TARGET_LINK_LIBRARIES(libh2o-evloop ${EXTRA_LIBS})
+    TARGET_LINK_LIBRARIES(libh2o-evloop ${EXTRA_LIBS} -lbrotlidec -lbrotlienc)
 ENDIF (WSLAY_FOUND)
 
 TARGET_INCLUDE_DIRECTORIES(libh2o PUBLIC ${OPENSSL_INCLUDE_DIR})
